--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "add": "^2.0.6",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-date-range": "^2.0.0-alpha.4",
@@ -24,7 +25,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.30.2",
-    "react-toastify": "^10.0.4",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "yarn": "^1.22.21"
   },
